# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Change from using a directory check to a file check. This should fix bug
  #215822.

  12 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.defaults:
  Move removable storage like USB and firewire after traditional fixed storage
  like PATA/SATA/SCSI for bug #217347.

  10 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> TODO, genkernel:
  Updated TODO.  This is 3.4.10_pre9 for testing.

  08 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.defaults, generic/initrd.scripts:
  Added scsi to the default list of modules to load.

  05 Apr 2008; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh:
  Set CMD_KEYMAP to default to yes, so it's enabled unless specifically
  disabled

  04 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, genkernel:
  Added a patch to skip device nodes for devices if at least one partition
  exists on the device. This aids in LiveUSB usage and is for bug #212794.
  This is genkernel 3.4.10_pre8.

  03 Apr 2008; Andrew Gaffney <agaffney@gentoo.org> generic/linuxrc:
  Split up /dev node checks into console/null and tty1

  02 Apr 2008; Andrew Gaffney <agaffney@gentoo.org> generic/linuxrc:
  Remove initrd-specific code from linuxrc

  30 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh:
  Uncomment ppc/ppc64->powerpc code in set_kernel_arch, since it appears to
  actually be necessary as of 2.6.24-gentoo-r4

  29 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  +patches/busybox/1.7.4/busybox-1.7.4-signal-hack.patch:
  Add patch from ebuild in-tree to fix build issue with signals on hppa

  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_determineargs.sh:
  Get rid of --initramfs option as it doesn't do anything anymore
